Quitado boton de editar de la pantalla almacen, porque estará ahora en cocina